log
Fri Apr 17 06:38:35 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
97fbcd0
Fri Apr 17 06:38:58 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
7442aca
Fri Apr 17 06:39:03 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
154ea9b
Fri Apr 17 07:01:36 PM UTC 2026: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:73:19: error: invalid operands to binary % (have ‘char *’ and ‘long int’)
   73 |     int pos = key % map->size;
      |                   ^ ~~~~~~~~~
      |                        |
      |                        long int
1c5a1fd
Fri Apr 17 07:04:38 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:73:20: error: invalid operands to binary % (have ‘char *’ and ‘long int’)
   73 |     long pos = key % map->size;
      |                    ^ ~~~~~~~~~
      |                         |
      |                         long int
fb50b19
Fri Apr 17 07:06:01 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c0043dd
Fri Apr 17 07:08:04 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b0c3f9a
Fri Apr 17 07:08:45 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
5bd13e6
Fri Apr 17 07:09:57 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
6d7590a
Fri Apr 17 07:14:22 PM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/60
fe1d878
Fri Apr 17 07:15:03 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c053d2b
Fri Apr 17 07:15:35 PM UTC 2026: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
654b891
Fri Apr 17 07:17:12 PM UTC 2026: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/60
886a854
Fri Apr 17 07:17:29 PM UTC 2026: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|7
total_score: 0/60
4b59196
